tests/baselines/reference/for-of29.errors.txt
for-of29.ts(5,15): error TS2488: Type '{ [Symbol.iterator]?(): Iterator<string, any, any>; }' must have a '[Symbol.iterator]()' method that returns an iterator.


==== for-of29.ts (1 errors) ====
    var iterableWithOptionalIterator: {
        [Symbol.iterator]?(): Iterator<string>
    };
    
    for (var v of iterableWithOptionalIterator) { }
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '{ [Symbol.iterator]?(): Iterator<string, any, any>; }' must have a '[Symbol.iterator]()' method that returns an iterator.
    